examples/good/04_print.xd
void fun () {
    print("inside void");

    void double_inside() {
        print("double inside");
        yeet;
    }

    double_inside();

    print("Numbers are working!");
    print(1);
    print(2);

    yeet;
}

int main() {
    string a = "a", b = "b", c = "c";
    print(a);
    print(b);
    print("abc" + "def");
    fun();
    yeet 0;
}